Adicionando a pasta image e atualização do projeto

--- a/index.html
+++ b/index.html
@@ -25,42 +25,42 @@
 
       <!-- Card 1 -->
       <div class="flex flex-col justify-center items-center bg-white p-4 rounded shadow basis-80">
-        <img class="w-32 h-32 object-cover rounded-md" src="/Users/Thiago/Downloads/site com tailwind/itachi-uchiha-v0-uq9bah1u441c1.webp" alt="">
+        <img class="w-32 h-32 object-cover rounded-md" src="/image/itachi-uchiha-v0-uq9bah1u441c1.webp" alt="">
         <h1 class="text-black text-2xl mt-4">Itachi Uchiha</h1>
         <p class="text-gray-400 text-center">Hokage das sombras | Melhor Uchiha</p>
       </div>
 
       <!-- Card 2 -->
       <div class="flex flex-col justify-center items-center bg-white p-4 rounded shadow basis-80">
-        <img class="w-32 h-32 object-cover rounded-md" src="/Users/Thiago/Downloads/site com tailwind/edo-tensei-tobirama-senju-naruto-hokage-o6k1r4hdpvobx527.jpg" alt="">   
+        <img class="w-32 h-32 object-cover rounded-md" src="/image/edo-tensei-tobirama-senju-naruto-hokage-o6k1r4hdpvobx527.jpg" alt="">   
         <h1 class="text-black text-2xl mt-4">Tobirama Senju</h1>
         <p class="text-gray-400 text-center">2º Hokage de Konoha | O mais rápido de todos</p>
       </div>
 
       <!-- Card 3 -->
       <div class="flex flex-col justify-center items-center bg-white p-4 rounded shadow basis-80">
-        <img class="w-32 h-32 object-cover rounded-md" src="/Users/Thiago/Downloads/site com tailwind/minato-namikaze-from-naruto-a41cy5olkpa80fya.jpg" alt="">
+        <img class="w-32 h-32 object-cover rounded-md" src="/image/minato-namikaze-from-naruto-a41cy5olkpa80fya.jpg" alt="">
         <h1 class="text-black text-2xl mt-4">Minato Namikaze</h1>
         <p class="text-gray-400 text-center">4º Hokage de Konoha | Relâmpago Amarelo da Folha</p>
       </div>
 
       <!-- Card 4 -->
       <div class="flex flex-col justify-center items-center bg-white p-4 rounded shadow basis-80">
-        <img class="w-32 h-32 object-cover rounded-md" src="/Users/Thiago/Downloads/site com tailwind/madara.jpg" alt="">
+        <img class="w-32 h-32 object-cover rounded-md" src="/image/madara.jpg" alt="">
         <h1 class="text-black text-2xl mt-4">Madara Uchiha</h1>
         <p class="text-gray-400 text-center">Uchiha Lendário | Segundo Sábio dos Seis Caminhos </p>
       </div>
 
       <!-- Card 5 -->
       <div class="flex flex-col justify-center items-center bg-white p-4 rounded shadow basis-80">
-        <img class="w-32 h-32 object-cover rounded-md" src="/Users/Thiago/Downloads/site com tailwind/obito.jpg" alt="">
+        <img class="w-32 h-32 object-cover rounded-md" src="/image/obito.jpg" alt="">
         <h1 class="text-black text-2xl mt-4">Obito Uchiha</h1>
         <p class="text-gray-400 text-center">Tobi/Madara | Causador da 4º Grande Guerra Ninja | Gado DEMAISSS</p>
       </div>
 
       <!-- Card 6 -->
       <div class="flex flex-col justify-center items-center bg-white p-4 rounded shadow basis-80">
-        <img class="w-32 h-32 object-cover rounded-md" src="/Users/Thiago/Downloads/site com tailwind/hashirama.jpg" alt="">
+        <img class="w-32 h-32 object-cover rounded-md" src="/image/hashirama.jpg" alt="">
         <h1 class="text-black text-2xl mt-4">Hashirama Senju</h1>
         <p class="text-gray-400 text-center">1º Hokage de Konoha | Deus Shinobi</p>
       </div>
